--- a/force-app/main/default/classes/WaveMetadataApplication.cls
+++ b/force-app/main/default/classes/WaveMetadataApplication.cls
@@ -7,4 +7,5 @@ public virtual class WaveMetadataApplication {
 	public List<WaveMetadataApplicationObject> objects;
 	public TimeShiftSettings timeShift;
 	public List<WaveMetadataApplicationEdgemart> edgemarts;
+	public List<WaveMetadataApplicationActionField> actionFieldOverrides;
 }
