--- a/force-app/main/default/classes/WaveMetadataApplicationActionField.cls
+++ b/force-app/main/default/classes/WaveMetadataApplicationActionField.cls
@@ -2,4 +2,5 @@ public class WaveMetadataApplicationActionField {
     public String datasetName;
     public String actionFieldName;
     public String actionFieldLabel;
+    public String computeExpressionName;
 }
