--- a/force-app/main/default/classes/ReplaceSfdcDigestByEdgemartsDirect.cls
+++ b/force-app/main/default/classes/ReplaceSfdcDigestByEdgemartsDirect.cls
@@ -38,8 +38,9 @@ public with sharing class ReplaceSfdcDigestByEdgemartsDirect implements ReplaceS
                         Map<String, Object> nodeParams = (Map<String, Object>)node.get('parameters');
                         switch on action {
                             when 'append' {
-                                List<String> sources = (List<String>)nodeParams.get('sources');
-                                for (String sourceTransf: sources) {
+                                List<Object> sources = (List<Object>)nodeParams.get('sources');
+                                for (Object sourceTransfObj: sources) {
+                                    String sourceTransf = (String) sourceTransfObj;
                                     if (lstDigestsToReplace.contains(sourceTransf)) {
                                         dependencyMap.get(sourceTransf).add(nodeName);
                                     }
@@ -85,7 +86,7 @@ public with sharing class ReplaceSfdcDigestByEdgemartsDirect implements ReplaceS
                 Map<String, Object> nodeParams = (Map<String, Object>)nodeToEdit.get('parameters');
                 switch on action {
                     when 'append' {
-                        List<String> sources = (List<String>)nodeParams.get('sources');
+                        List<Object> sources = (List<Object>)nodeParams.get('sources');
                         sources.remove(sources.indexOf(nodeName));
                         sources.add(replaceNodesMap.get(nodeName));
                     }
